Fixing to more click area on mobile

--- a/src/styl/_home.styl
+++ b/src/styl/_home.styl
@@ -18,10 +18,6 @@ main
     min-height rem(285px)
     transition all .3s
     position relative
-    .post-link:not(:visited)
-        .ribbon span
-            background #fff
-            border 1px solid #eee
     &:hover
         box-shadow 1px 2px 10px #eee
     a
@@ -61,6 +57,7 @@ main
             border-radius 3px
             display inline-block
             margin 0 0 rem(5px)
+            z-index 50
             &:first-child
                 display none
                 
