--- a/src/styl/_search.styl
+++ b/src/styl/_search.styl
@@ -72,6 +72,9 @@ input[type="search"]::-webkit-search-cancel-button
         position absolute
         width 100%
         mainFont(300)
+        display none
+        .active &
+            display block
     h4, li, p, a, a:hover
         color sec
 
